# dobot_atom_sdk

./: CMakeLists.txt  README.md  README_EN.md  README_zh-CN.md  algs_version.h
common/: bridge.h  bridge.yaml  joystick.h  robot_state.h  yaml_parser.h
common/filesystem/: filesystem.cpp  filesystem.hpp
config/: W_Aging_joint_angles.txt  atomW_controlParams.json  cyclonedds.xml  joint_angles.txt  leg_q_walk.txt  lower_joint_angles.txt  upper_joint_angles.txt
example/: CMakeLists.txt  bridge_test.cpp  joystick_control_amr.cpp  record_joint.cpp  rpc_test.cpp
idl/: amr_cmd.h  amr_state.h  emergency_state.h  enable_motors.h  remote_control.h  set_fsm_id.h
rpc/: algs_rpc_client.h  base_rpc_client.h  gcontrol_rpc_client.h
